2005-11-30  Martin Baulig  <martin@ximian.com>
	* backends/server/i386-arch.c
	(server_ptrace_call_method_invoke): Make this work again.


svn path=/trunk/debugger/; revision=53686

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-30  Martin Baulig  <martin@ximian.com>
+
+	* backends/server/i386-arch.c
+	(server_ptrace_call_method_invoke): Make this work again.
+
 2005-11-29  Martin Baulig  <martin@ximian.com>
 
 	* backends/server/i386-arch.c
