--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-12-15  Martin Baulig  <martin@ximian.com>
+
+	Released version 0.11 "Guam" of the Mono Debugger :-)
+
 2005-12-14  Martin Baulig  <martin@ximian.com>
 
 	* wrapper/Mono.Debugger.Cecil.dll: Added this to SVN.
