--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-12-21  Wade Berrier <wberrier@novell.com>
+
+	* wrapper/mdb.in: Modify wrapper to match more closly the wrappers in mono
+
 2005-12-15  Martin Baulig  <martin@ximian.com>
 
 	Released version 0.11 "Guam" of the Mono Debugger :-)
