--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-01-21  Martin Baulig  <martin@ximian.com>
+
+	* wrapper/wrapper.c, thread-manager.c: Merge wrapper.c and
+	thread-manager.c into wrapper.c.
+
+	* wrapper/thread-manager.c: Removed.
+	* wrapper/icall.c: Removed.
+
 2006-01-19  Martin Baulig  <martin@ximian.com>
 
 	* backends/SingleSteppingEngine.cs
